--- a/k8s/backendService.yaml
+++ b/k8s/backendService.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend
-  namespace: myapp
+  namespace: dev-student-app
 spec:
   selector:
     app: backend
