--- a/k8s/frontendService.yaml
+++ b/k8s/frontendService.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend
-  namespace: myapp
+  namespace: dev-student-app
 spec:
   selector:
     app: frontend
@@ -10,4 +10,4 @@ spec:
     - protocol: TCP
       port: 3000
       targetPort: 3000
-  type: LoadBalancer  # Use NodePort if LoadBalancer is not supported
+  type: NodePort  
