update health in app.py and manifest file

--- a/k8s/backendDeployment.yaml
+++ b/k8s/backendDeployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: backend
 spec:
-  replicas: 2
+  replicas: 2  # Number of pods for the backend service
   selector:
     matchLabels:
       app: backend
@@ -17,13 +17,9 @@ spec:
     spec:
       containers:
         - name: backend
-          image: myusername/student_backend:12   # Change this to your real image
+          image: myusername/student_backend:12  # Change this to your real image
           ports:
-            - containerPort: 5000
-          # env:
-            # Add your ENV variables here
-            # - name: ENV_VAR
-            #   value: value
+            - containerPort: 5000  # Port your app is listening on
           resources:
             requests:
               cpu: "100m"
@@ -33,13 +29,17 @@ spec:
               memory: "512Mi"
           readinessProbe:
             httpGet:
-              path: /health
-              port: 5000
-            initialDelaySeconds: 5
-            periodSeconds: 10
+              path: /health  # Health check path
+              port: 5000      # Health check port
+            initialDelaySeconds: 5  # Delay before starting to check health
+            periodSeconds: 10       # Interval to check health
+            failureThreshold: 3     # Number of failures before considering the pod unhealthy
+            timeoutSeconds: 3       # Timeout for the health check
           livenessProbe:
             httpGet:
-              path: /health
-              port: 5000
-            initialDelaySeconds: 15
-            periodSeconds: 20
+              path: /health  # Health check path for liveness probe
+              port: 5000      # Health check port
+            initialDelaySeconds: 15  # Delay before starting to check liveness
+            periodSeconds: 20        # Interval to check liveness
+            failureThreshold: 3      # Number of failures before restarting the container
+            timeoutSeconds: 5        # Timeout for the liveness check
