--- a/k8s/frontendService.yaml
+++ b/k8s/frontendService.yaml
@@ -10,5 +10,5 @@ spec:
     - protocol: TCP
       port: 3000
       targetPort: 3000
-      NodePort: 30080
+      nodePort: 30080
   type: NodePort  
