--- a/frontend-new/package.json
+++ b/frontend-new/package.json
@@ -13,7 +13,9 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@google/generative-ai": "^0.24.1",
+    "axios": "^1.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
